LWR-190: added media caption plus alignment fix

--- a/src/stories/Molecules/Card/Card.css
+++ b/src/stories/Molecules/Card/Card.css
@@ -9,12 +9,14 @@
   height: 100%;
 }
 
-.card .icon-wrapper {
-  block-size: var(--s5);
+.card__media .frame .card__media_caption {
+  margin-block-start: var(--s-6);
+  padding-inline: var(--s-2);
+  font-size: var(--s-1);
 }
 
-.card > .switcher.wrapping {
-  display: block;
+.card .icon-wrapper {
+  block-size: var(--s5);
 }
 
 /* Variants */
